# SpinnIO

./: CMakeLists.txt  README.md  SpinnIOConfig.cmake
library_src/include/: DatabaseIF.h  EIEIOReceiver.h  EIEIOSender.h  SocketIF.h
library_src/src/: DatabaseIF.cpp  EIEIOReceiver.cpp  EIEIOSender.cpp  SocketIF.cpp
